--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,14 +7,15 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1')
     // Bootstrap CSS
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC' crossorigin='anonymous')
+
+    //- Google Font Poppins for h1>h6 and Roboto for <p>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto&display=swap" rel="stylesheet"> 
 
+    link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css')
 
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    
     script(src='/javascripts/index1.js')
     style.
       *{
@@ -25,38 +26,63 @@ html
       }
   // Header for all the pages
   header
-  .container-fluid.shadow.mb-3.rounded
-    nav.navbar.navbar-light.navbar-expand-lg.py-2
+  .container-fluid.shadow-lg.p-3.mb-3.rounded
+    nav.navbar.navbar-light.bg-dark.navbar-expand-lg.py-2
       .container-fluid
-        a.navbar-brand.fs-3.fw-bold(href='#')
-          img.d-inline-block.align-text-center.m-2(src='/images/android-chrome-512x512.png' alt='' width='60rem')
+        a.navbar-brand.fs-1.fw-bold.text-white(href='/')
+          img.d-inline-block.align-text-top(src='/images/logo.png' alt='' width='60rem')
           |Travel Experts
         button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation')
           span.navbar-toggler-icon
         #navbarSupportedContent.collapse.navbar-collapse
           ul.navbar-nav.ms-auto.mb-2.mb-lg-0.fs-5.fw-bold
             li.nav-item.ms-4
-              a.nav-link.active(aria-current='page' href='/') Home
+              a.nav-link.active.text-white(aria-current='page' href='/')  Home
             li.nav-item.ms-4
-              a.nav-link.active(href='/packages') Packages
-            if currentUser
+              a.nav-link.active.text-white(href='/packages') Packages
+            if !currentUser  
               li.nav-item.ms-4
-                a.nav-link.active(href='/users/userProfile') Account
-            if !currentUser
+                a.nav-link.active.text-white(href='/account') Account
+            if currentUser 
               li.nav-item.ms-4
-                a.nav-link.active(href='/account') Account    
+                a.nav-link.active.text-white(href='/users/userProfile') Account
             li.nav-item.ms-4
-              a.nav-link.active(href='/contact') Contact
+              a.nav-link.active.text-white(href='/contact') Contact
             li.nav-item.ms-4
-              a.nav-link.active(href='/about') About Us
+              a.nav-link.active.text-white(href='/about') About Us
   body
     block content
     // Footer for all pages
-    footer.footer.py-3.shadow(style=' position: relative; bottom: 0; width: 100%; margin-top: auto')
-     .container.text-center
-      h3  
-        span.text-dark.fw-bold.fs-3
-        | Travel Experts 
-        sup &copy;
-        |  2021
+    footer.footer.py-3.shadow-lg.bg-dark(style=' position: relative; bottom: 0; width: 100%; margin-top: auto')
+        .container.text-center.text-white-50
+          h3  
+
+                 span.text-dark.fw-bold.fs-3
+                 | Travel Experts 
+                 sup &copy;
+                 |  2021
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js' integrity='sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM' crossorigin='anonymous')
+
+
+      // back to top button
+      
+    button#myBtn(onclick='topFunction()' title='Go to top' style='display: none;') Top
+      
+      // Get the button:
+    script.
+        //Get the button
+        var mybutton = document.getElementById("myBtn");
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+        function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+        } else {
+        mybutton.style.display = "none";
+        }
+        }
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+        }
