--- a/views/userPackageUpdate.pug
+++ b/views/userPackageUpdate.pug
@@ -1,3 +1,13 @@
 extends layout 
 block content 
     h1 #{title} Page
+    h5 #{booking}
+        .container-fluid.shadow.p-3.mb-3.rounded.col-xl-8.col-md-4
+                    h1.text-center Update trip
+                    form(action="/users/userProfile/updatePackage/"+booking._id, method="post").d-flex.flex-column.align-items-center
+                        .col-md-8.mt-3
+                            label(for="travellerCount") Update the number of Travellers
+                            input.form-control(name="travellerCount" placeholder=booking.travellerCount type="text")
+                        .col.m-3
+                            button.btn.btn-primary.m-1(type="submit") Update
+                            a.btn.btn-secondary.m-1(href="/users/userProfile") Go back 
